Fix window resize causing content clipping

--- a/web/app/style/pulssi.less
+++ b/web/app/style/pulssi.less
@@ -31,10 +31,6 @@ ul {
   padding: 0;
 }
 
-.statistics {
-  height: 100%;
-}
-
 .lower-left-container {
   width: 66.66%;
 }
@@ -42,10 +38,6 @@ ul {
 .column {
   display: flex;
   flex-direction: column;
-}
-
-.expanding {
-  flex: 1;
 }
 
 .two-columns, .three-columns {
